cmake_minimum_required(VERSION 2.8)
project(BPlus)
include_directories(include)
set(CMAKE_CXX_FLAGS "-std=c++11 -m32 -pthread")
add_subdirectory(src)
add_executable(main main.cc include/BPT_release.h include/BPT_insert.h include/BPT_remove.h include/BPT_solveOverflow.h include/BPT_solveUnderflow.h include/BPT_search.h include/MTBPT.h)